Rename project to "parallelPast" and update related configurations, titles, and descriptions throughout the application.

--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Timeline — Parallel History</title>
+  <title>Parallel Past</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="An interactive parallel history timeline exploring global, national, and regional events side by side.">
+  <meta name="description" content="parallelPast — an interactive parallel history timeline exploring global, national, and regional events side by side.">
   <meta name="theme-color" content="#0f172a">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
